refactor: move bulk transcript retrieval to YoutubeTranscriptApi, cleanup code